<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/view_pager_background"
    android:orientation="vertical"
    android:layout_marginTop="210dp"
    android:layout_marginBottom="30dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.gelecegiyazanlar.hocamnerede.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:customFont="Lato-Black.ttf"
        android:textSize="21sp"
        android:text="@string/sign_in_text"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signInMailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/mail_hint" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signInPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/pass_hint" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/signInConfirm"
        android:text="@string/confirm"
        android:textColor="#fff"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_confirm"/>

    <com.gelecegiyazanlar.hocamnerede.CustomTextView
        android:id="@+id/slideToRegister"
        android:clickable="true"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create_a_account"/>

    <com.gelecegiyazanlar.hocamnerede.CustomTextView
        android:id="@+id/slideToReset"
        android:clickable="true"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Şifremi Unuttum"/>

</LinearLayout>